--- a/thankyou.html
+++ b/thankyou.html
@@ -21,7 +21,7 @@
 
         <!-- Audio (muted initially) -->
         <audio id="submissionAudio" muted>
-            <source src="c:/Users/Windows/Downloads/imagine if ninja had a low taper fade.mp3" type="audio/mpeg">
+            <source src="https://drive.google.com/file/d/1hPwMKidfZP7DEbxrDXTqWiyrHW27TSXc/view" type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
     </div>
